# lib

./: Cargo.toml  README.md
migrations/: 20260329000000_initial.sql  20260403000000_log_configs.sql
src/: emojis.rs  lib.rs  permissions.rs  util.rs
src/cache/: memory.rs  mod.rs  redis.rs
src/clients/: mesastream.rs  mesastream_ws.rs  mod.rs
src/db/: config.rs  infractions.rs  logging.rs  mod.rs
src/discord/: audio.rs  commands.rs  error.rs  guild.rs  mod.rs  model.rs  permissions.rs  rest.rs  ws.rs
src/model/: automod.rs  config.rs  infraction.rs  logging.rs  mesastream.rs  mod.rs  permissions.rs
