[package]
name = "bm-lib"
version = "0.1.0"
edition = "2021"
authors = ["Tyler Thompson <me@dhopcs.org>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.13", features = ["json"] }
reqwest-middleware = "0.5"
reqwest-tracing = { version = "0.7", features = ["opentelemetry_0_27"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
bitflags = { version = "2.9", features = ["serde"] }
async-trait = "0.1"
dashmap = "6.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
smol_str = { version = "0.3", features = ["serde"] }
redis = { version = "1", features = ["tokio-comp"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
task-local-extensions = "0.1"
